
4.2.1 2023/03/XX
  - capture - tcpClosingTimeout setting controls delay before saving tcp
              sessions after close
  - capture - default dbBulkSize to 1M, min 500K, max 15M and removed 
              from sample config file
  - db.pl - new --ifneeded option to init/upgrade that will just exit if not needed

4.2.0 2023/03/01
  - release - node 16.19.1, support node v18
  - release - fix arch build issues
  - release - EL9 build uses sha256 digest
  - all - OpenSearch/Elasticsearch name cleanup
  - all - cleanup nodejs dependencies
  - all - refactor how authentication is done, everything now uses passportjs
  - all - support oidc authentication method
  - all - caTrustFile setting should work everywhere
  - capture - support ERSPAN Type I and vlan for Type II
  - capture - new kafka plugin for sessions
  - capture - use malloc instead of GSlice
  - capture - corrupt DNS alt name memory leak fixed
  - capture - Added simpleFreeOutputBuffers setting
  - cont3xt - raw create link groups
  - cont3xt - two clicks to delete link groups or links
  - cont3xt - classify domains with multiple dashes correctly
  - cont3xt - added ability to copy links between link groups
  - cont3xt - support intl phonenumbers
  - db.pl - Initial OpenSearch ISM support
  - db.pl - Better error text for cert verify failure
  - esproxy - fix converting basic auth to base64
  - viewer - fix field actions crash
  - viewer - can now use expression  http.request.FIELD or http.response.FIELD
             with headers-http-request, headers-http-response defined fields
  - viewer - support viewing ipv6 DLT_RAW (#1293)
  - viewer - ESAdmin -> Unflood works on users cluster now also
  - viewer - support running in s2s auth mode only


4.1.0 2023/01/10
  - release - glib 2.72.4 cyberchef 9.55.0 flot 4.2.3 d3 7.7
  - db.pl - backup/restore wasn't dealing with templates correctly
  - db.pl - upgrade failed if there was no moloch_shared user